--- a/index.html
+++ b/index.html
@@ -12,6 +12,102 @@
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
     <body>
-      <h1>Browser Template</h1>
+      <h1>TOP BETTER</h1>
+      <hr>
+      <p>
+        <a class="btn btn-primary" data-bs-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">Toggle first element</a>
+        <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#multiCollapseExample2" aria-expanded="false" aria-controls="multiCollapseExample2">Toggle second element</button>
+        <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target=".multi-collapse" aria-expanded="false" aria-controls="multiCollapseExample1 multiCollapseExample2">Toggle both elements</button>
+      </p>
+      <div class="row">
+        <div class="col">
+          <div class="collapse multi-collapse" id="multiCollapseExample1">
+            <div class="card card-body1">
+              Some placeholder content for the first collapse component of this multi-collapse example. This panel is hidden by default but revealed when the user activates the relevant trigger.
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="collapse multi-collapse" id="multiCollapseExample2">
+            <div class="card card-body">
+              Some placeholder content for the second collapse component of this multi-collapse example. This panel is hidden by default but revealed when the user activates the relevant trigger.
+            </div>
+          </div>
+        </div>
+      </div>
+
+        <!-- <section id='sign-in-sec'>
+        <form>
+        <div class="mb-3">
+          <label for="exampleInputEmail1" class="form-label">Email address</label>
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+          <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+        </div>
+        <div class="mb-3">
+          <label for="exampleInputPassword1" class="form-label">Password</label>
+          <input type="password" class="form-control" id="exampleInputPassword1">
+        </div>
+        <div class="mb-3">
+          <label for="exampleInputPassword1" class="form-label">Password</label>
+          <input type="password" class="form-control" id="exampleInputPassword1">
+        </div>
+        <div class="mb-3 form-check">
+          <input type="checkbox" class="form-check-input" id="exampleCheck1">
+          <label class="form-check-label" for="exampleCheck1">Check me out</label>
+        </div>
+        <button type="submit" class="btn btn-primary">SIGN UP</button>
+      </form>
+     </section> -->
+
+   <section id='blog-post'>
+    <div class="mb-3">
+     <label for="sport-input" class="form-label">Your Pick</label>
+     <input type="text" class="form-control" id="sport" placeholder="Sport">
+   </div>
+   <div class="mb-3">
+    <label for="title-input" class="form-label">Title</label>
+    <input type="text" class="form-control" id="title" placeholder="Title">
+  </div>
+   <div class="mb-3">
+     <label for="exampleFormControlTextarea1" class="form-label">PICKS & Over/Under</label>
+     <textarea class="form-control" id="body" rows="3"></textarea>
+     <button id='textsub'>SUBMIT</button>
+  </div>
+ </section>
+  <footer>
+    <section class='auth-hide'>
+      <h3> Sign up</h3>
+      <form id='sign-up'>
+        <input name="credentials[email]" type="text" value="E-Mail" required>
+        <input name="credentials[password]" type="password" placeholder="Password" required>
+        <input name="credentials[password_confirmation]" type="password" placeholder="Password" required>
+        <button>Sign up</button>
+      </form>
+      <hr>
+
+      <h3>Sign in</h3>
+      <form id='sign-in' class='auth-hide'>
+        <input name="credentials[email]" type="email" value="E-Mail" required>
+        <input name="credentials[password]" type="password" placeholder="Password" required>
+        <button>Sign in</button>
+      </form>
+      <hr>
+    </section>
+        <hr>
+    <section class='change-password-section'>
+        <h3>Change password</h3>
+        <form id='change-password'>
+          <input name="passwords[old]" type="password" placeholder='Old PW' required>
+          <input name="passwords[new]" type="password"  placeholder='New PW' required>
+            <button>Change password</button>
+        </form>
+    </section>
+              <button id="sign-out"> Sign Out </button>
+  </footer>
+<!-- <button onclick="onSignOut()">Logout</button> -->
+
+
+
+
     </body>
 </html>
