Got post Indexed dynamic update and delete are broken

--- a/index.html
+++ b/index.html
@@ -77,6 +77,10 @@
 </form>
 <div id ='post-message'></div>
 </section>
+   <button id="posts-index">See All Picks</button>
+   <button id="hide-posts-index">Hide Picks</button>
+   <div id='posts-display'></div>
+
   <footer>
     <section class='auth-hide'>
       <h3> Sign up</h3>
@@ -106,6 +110,7 @@
         </form>
     </section>
               <button id="sign-out"> Sign Out </button>
+              <div id=error-message><?div
   </footer>
 <!-- <button onclick="onSignOut()">Logout</button> -->
 
