Styles added not final just messing around

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <title>Example</title>
+      <title>TOPBETTER</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
 
       <!-- Do not add `link` tags-->
@@ -11,10 +11,13 @@
       <script src="public/vendor.js" type="text/javascript" charset="utf-8" defer></script>
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
+    <img class='background' src="images/sports-background.jpg">
     <body>
-      <h1>TOP BETTER</h1>
+      <div class="sign">
+      <span class="fast-flicker">T</span>opbet<span class="flicker">t</span>er
+    </div>
       <hr>
-      <p>
+      <!-- <p>
         <a class="btn btn-primary" data-bs-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">Toggle first element</a>
         <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#multiCollapseExample2" aria-expanded="false" aria-controls="multiCollapseExample2">Toggle second element</button>
 
@@ -34,7 +37,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
 
         <!-- <section id='sign-in-sec'>
         <form>
@@ -58,7 +61,8 @@
         <button type="submit" class="btn btn-primary">SIGN UP</button>
       </form>
      </section> -->
-
+     <h2 class='make'>Make Your Picks</h2>
+     <hr>
    <section id='blog-post'>
     <form id='textsub'>
      <div class="mb-3">
@@ -110,7 +114,7 @@
         </form>
     </section>
               <button id="sign-out"> Sign Out </button>
-              <div id=error-message><?div
+              <div id=error-message></div>
   </footer>
 <!-- <button onclick="onSignOut()">Logout</button> -->
 
