--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     </section>
         <hr>
     <section class='change-password-section'>
-        <h3>Change password</h3>
+        <h3 class='cpw'>Change password</h3>
         <form id='change-password'>
           <input name="passwords[old]" type="password" placeholder='Old PW' required>
           <input name="passwords[new]" type="password"  placeholder='New PW' required>
