WOnky scss having issues with moving sign in and sign out with functionality

--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
 
   <footer>
     <section class='auth-hide'>
-      <h3 class='sign-up'> Sign up</h3>
-      <form class='sign-up'>
+      <h3 class='s.u'> Sign up</h3>
+      <form id='sign-up'>
         <input name="credentials[email]" type="text" value="E-Mail" required>
         <input name="credentials[password]" type="password" placeholder="Password" required>
         <input name="credentials[password_confirmation]" type="password" placeholder="Password" required>
@@ -96,8 +96,8 @@
       </form>
       <hr>
 
-      <h3 class='sign-in'>Sign in</h3>
-      <form class='sign-in' class='auth-hide'>
+      <h3 class='s.i'>Sign in</h3>
+      <form id='sign-in' class='auth-hide '>
         <input name="credentials[email]" type="email" value="E-Mail" required>
         <input name="credentials[password]" type="password" placeholder="Password" required>
         <button>Sign in</button>
