Read me updated as well as console.logs removed

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <script src="public/vendor.js" type="text/javascript" charset="utf-8" defer></script>
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
-    <img class='background' src="images/sports-background.jpg">
+    <!-- <img class='background' src="images/sports-background.jpg"> -->
     <body>
       <div class="sign">
       <span class="fast-flicker">T</span>opbet<span class="flicker">t</span>er
@@ -61,7 +61,7 @@
         <button type="submit" class="btn btn-primary">SIGN UP</button>
       </form>
      </section> -->
-     <h2 class='make'>Make Your Picks</h2>
+     <!-- <h2 class='make'>Make Your Picks</h2> -->
      <hr>
    <section id='blog-post'>
     <form id='textsub'>
@@ -89,7 +89,7 @@
     <section class='auth-hide'>
       <h3 class='s.u'> Sign up</h3>
       <form id='sign-up'>
-        <input name="credentials[email]" type="text" value="E-Mail" required>
+        <input name="credentials[email]" type="text" placeholder="E-Mail" required>
         <input name="credentials[password]" type="password" placeholder="Password" required>
         <input name="credentials[password_confirmation]" type="password" placeholder="Password" required>
         <button>Sign up</button>
