Display message when see all picks is empty

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
       <h3 class='s.i'>Sign in</h3>
       <form id='sign-in' class='auth-hide '>
-        <input name="credentials[email]" type="email" value="E-Mail" required>
+        <input name="credentials[email]" type="email" placeholder="E-Mail" required>
         <input name="credentials[password]" type="password" placeholder="Password" required>
         <button>Sign in</button>
       </form>
